--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+.nav a{
+  text-decoration: none;
+  margin-right: 2%;
+  background-color: green;
+  border-radius: 4px;
+}
+.nav{
+  background-color: orange;
+  padding: 0.5%;
+  border-radius: 5px;
+  margin-right: 80%;
+}
+.nav a:hover{
+  background-color:red ;
+}
+.nav a:active{
+  background-color: white;
+}
